name: "coq-cfml-stdlib"
opam-version: "2.0"
maintainer: "arthur.chargueraud@inria.fr"

homepage: "https://github.com/charguer/tlc"
dev-repo: "git+https://github.com/charguer/tlc.git"
bug-reports: "https://github.com/charguer/tlc/issues"
license: "MIT"

synopsis: "The CFML standard library"
description: """
This library provides CFML specifications for a subset of the OCaml standard library.
"""

build: [make "-C" "lib/stdlib" "-j%{jobs}%"]
install: [make "-C" "lib/stdlib" "install"]
depends: [
  "coq" { >= "8.12" }
  "cfmlc" { = version }
  "coq-cfml-basis" { = version }
]

tags: [
  "date:DATEDASH"
  "logpath:CFML.Stdlib"
  "category:Computer Science/Programming Languages/Formal Definitions and Theory"
  "keyword:program verification"
  "keyword:separation logic"
  "keyword:weakest precondition"
]
authors: [
  "Arthur Charguéraud"
]
