name: "coq-cfml-stdlib"
opam-version: "2.0"
maintainer: "arthur.chargueraud@inria.fr"

homepage: "https://gitlab.inria.fr/charguer/cfml2"
dev-repo: "git+https://gitlab.inria.fr/charguer/cfml2.git"
bug-reports: "https://gitlab.inria.fr/charguer/cfml2/-/issues"
license: "MIT"

synopsis: "The CFML program verification system"
description: """
CFML is a program verification system for OCaml.
"""

build: [make "-C" "lib/stdlib" "-j%{jobs}%"]
install: [make "-C" "lib/stdlib" "install"]
depends: [
  "coq" { >= "8.12" }
  "cfmlc" { = version }
  "coq-cfml-basis" { = version }
]

tags: [
  "date:DATEDASH"
  "logpath:CFML.Stdlib"
  "category:Computer Science/Programming Languages/Formal Definitions and Theory"
  "keyword:program verification"
  "keyword:separation logic"
  "keyword:weakest precondition"
]
authors: [
  "Arthur Charguéraud"
]
