;; Install our Makefiles in <opam root>/lib/cfml.
(install
  (package cfml)
  (section lib)
  (files Makefile.cfml Makefile.generic Makefile.enduser Makefile.coqproject)
)
;; Install ocamldep.post in <opam root>/lib/cfml,
;; with the executable bit set.
(install
  (package cfml)
  (section libexec)
  (files ocamldep.post)
)
